--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,16 +1,47 @@
+# ======================
+# Sistema
+# ======================
 sistema.nome=MyHome
 sistema.versao=1.0
 
+# ======================
+# Anúncio
+# ======================
 anuncio.limite.fotos=20
 anuncio.titulo.min=10
 anuncio.titulo.max=100
 anuncio.descricao.min=20
 anuncio.descricao.max=3000
 
+# ======================
+# Preços
+# ======================
 preco.venda.min=10000
 preco.aluguel.min=100
 preco.max=500000000
 
+# ======================
+# Moderação
+# ======================
 moderacao.termos=golpe,fraude,spam,gratis
 
+# ======================
+# Notificação
+# ======================
 notificacao.canal=EMAIL
+
+# ======================
+# Imóvel - Casa (Factory defaults)
+# ======================
+imovel.casa.titulo=Casa comum com quintal
+imovel.casa.possuiQuintal=true
+
+
+
+imovel.apartamento.titulo=Apartamento Central
+imovel.apartamento.quartos=3
+imovel.apartamento.possuiElevador=true
+
+imovel.terreno.titulo=Terreno Comum
+imovel.terreno.area=100
+
